--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://192.168.33.2
-#baseurl: /frazerk.net
+url: https://frazer.github.io
+baseurl: /frazerk.net
 
 # Site settings
 title: FrazerK
