added all testimonials

--- a/_data/testimonial.yml
+++ b/_data/testimonial.yml
@@ -1,17 +1,119 @@
 - name: Tom Butler-Bowdon
-  email: tom||buttler.net
   website: http://www.Butler-Bowdon.com
   testimonial: "I met Frazer over ten years ago via a mutual interest for self-development. Few people have the same level of passion for human potential, and few care as deeply as he about changing the world for the better. His guided meditations and workshops have helped many, and he always makes himself available to help anyone who needs it. Frazer has a contagious joy that will lift any group. I heartily recommend his power of inspiration to any person or organisation."
   image: IMG_2784.JPG
 
 - name: Couch Surfing Testimonials
-  email:
   website: https://www.couchsurfing.com/users/289587/references
   testimonial: "Practicing compassion meditation and dreaming big has a positive impact on how we relate with others. To see how the practices I teach have impacted me personally, see some of my personal references from my travels."
-  image:
 
-- name: Lloyd O'Donnell
-  email:
-  website:
+- name: Deborah Goss
+  testimonial: "We first met Frazer Kirkman during our Spring Vacation Care programme 2013. Working with a personal trainer to increase our physical fitness is applauded but how many of us are willing to employ a wellbeing coach to lead us in our pursuit of happiness? If there is such a thing, we may find it in the person of Frazer Kirkman, wellbeing coach, titled by some as ‘the happiness guru’. Our session began with a laughter workshop, a little confronting for some and it did seem a little contrived at first...how can you laugh at absolutely nothing, right?? Well take a moment to ponder this… Laughter is infectious. The sound of roaring laughter is far more contagious than any cough, sniffle, or sneeze. Laughter makes you feel good and this feeling remains even when the laughter subsides. It helps to keep a positive, optimistic outlook through difficult situations; a laugh or even simply a smile can go a long way toward making you feel better. Just hearing laughter primes your brain and readies you to smile and join in the fun!! Frazer is a delight; he gave us a great deal to think about and suggested that we could incorporate some new practices into our daily life. We talked about changing our habitual responses to difficult situations and he shared strategies that he used as a child when he faced conflict with schoolmates. We talked about compassion and positive visualization. We were given a tool kit that we could access to make ourselves feel better and rise above painful situations. Naturally this takes practice so we have invited Frazer to join us again to check on our progress and to instigate lots more laughter. Regards Debbie"
+  website: mercedes.catholic.edu.au
+  websiteName: Mercedes College
+  image: mercedes.jpg
+
+
+- name: "Lloyd O'Donnell"
   testimonial: "I did my first Compassion Meditation with Frazer at Confest. I told him at the time I felt it had changed my life and 6 months later I couldn't agree more with my original sentiments. Every time I feel a bit off (not so loving) I try to think of my best friends and how they make me feel. Who I am around them is who I want to be - with everyone, all the time. Thinking of them helps me re-centre and offer the person in front of me the same love, ease and respect that I would afford my nearest and dearest. Enjoy!!!!"
-  image:
+
+
+- name: Bacara
+  testimonial: "Frazer is one of the most kind, gentle and joyous souls I have ever met. This is experience in the abundance of his awesomely amazing workshops of laughter, meditation and yoga."
+
+
+- name: Helen
+  testimonial: "Frazer Kirkman posed a simple statement – you are what you think. He made this statement at a free positive thinking workshop he gave. It was the second time I had been to one of his workshops in as many years. But this time he had me – if you really were what you thought, if your internal thinkings had the ability to project outwardly, than I was a horrible ball of self-doubt and destruction. I didn’t want to be this anymore. I figured it was alright to get away with these thoughts, no-one else knew the hard time I was giving myself, and I figured the sometimes happy and confident person I had been projecting was convincing. Well - I tell you, you are what you think. And I wanted to be something creative and beautiful again. So after taking his business card from the workshop I got in touch with him and did a one-on-one session. It was pretty incredible the turn around. I created a wall of affirmation cards that I read over 3 times a day, like a mantra, until I believed them. I believe them now, and I am what I think. A beautiful creative giver with her whole world ahead of her. Thanks Frazer! x"
+  image: ADVERTISING-AD.jpg
+
+
+- name: Josh Gordonson
+  testimonial: "Frazer and I bonded over a mis-navigated journey through Boston's industrial parks, during which we thought on some of the deepest mysteries of the human mind. Since then, actively participating in a multitude of his meditation sessions and continuing to co-explore the universe through thought has led me to understand that Frazer is one of the most genuine people that I know. His positive purpose resonates so deeply within him that you can feel it radiating ever outward. He knows his way around the mind, let him help you understand yours."
+
+
+- name: Rach Cooper
+  testimonial: "I met Frazer at the Students of Sustainability conference in Launceston, Tasmania 2013 in July. I had the amazing chance to take part in Frazer's yoga classes everyday of this five day conference. I have been taking part in yoga for the best part of five years and in that time I have never had the kind of experience I had during my yoga practice at SOS with Frazer. Frazer brings a fantastic positive energy to the teachings of yoga and awesomeness that leaves you feeling revived and ready to take on anything."
+
+
+- name: Miranda Bain
+  testimonial: "Frazer is an extremely passionate, loving and dedicated person that I feel so privileged to have met. He has inspired me in many ways and brought so much happiness into my life. My confidence and level of compassion has increased significantly thanks to his awesome coaching and much valued friendship. He has enabled me to feel more empowered and in control of my life and able to accomplish anything I desire."
+  image: 126me.jpg
+
+
+- name: Amy Bilderbeck
+  testimonial: "Frazer introduced me to sublime guided meditations and, eventually, gave me confidence to guide other people in meditation! His open warmth and positivity is captured in his hugs and smile. In keeping in touch with me over the years, and although great distances apart, Frazer has given me a sense of the consistency and generosity of friendship. He continues to inspire my experience. For this I am deeply grateful."
+
+
+- name: Cassie Serina
+  testimonial: "I had heard of 'laughter sessions' before heading to Frazer's workshop, but never really knew that they were. And i'm pretty sure i still don't, because surely Frazer's are different to anything else out there. I appreciate the quiet times and reflecting moments incorporated into the session, which really allows you to appreciate the tingles, lightheadedness and feeling of contentment that excessive laughter brings. That was definitely an element i hadn't been expecting. For weeks after, i'll often start giggling on a train or down the street upon seeing someone smile on a bicycle, or seeing a baby playing on it's back! Since then I've been to many of Frazer's workshops, and regularly use the memory technique he taught to memorise 'to do' lists when i'm unable to write, for eg. when driving. Frazer is an extraordinarily insightful and patient teacher / facilitator / co-ordinator. He fits very naturally into this role, and always has time for the individual too."
+
+
+- name: Carol Larke
+  testimonial: "Frazer gave insightful and knowledgeable workshops. The thing that I most admired about Frazer is his generous spirit. It is this quality that is lacking in the world and Frazer is a role model both in his desire to make a positive difference and by the methods that he chooses to implement them."
+
+
+- name: Debra Braitberg
+  testimonial: "I met Frazer at Confest just last summer 2012/13 though it seems like I have known him for years. I've made so many changes in my life lately and through his wonderful support, words of advice, meditations and sense of community and love I have learnt that I am so much bigger and limitless than I previously imagined . I wake each day with gratitude for every one of my teachers, so very glad I met him when I did . I've learnt so much. I could never really thank him enough."
+
+
+- name: Anne Sanders
+  testimonial: "Vegetarian and Vegan Society (VegSA) Inc is very grateful to Frazer for help to update its web-site. Frazer demonstrates not only a considerable body of technical skill. He is also a sympathetic and encouraging teacher. He not only knows his subject but understands the students and how to respond to each of them. This is enabling VegSA to maintain its website with minimum of outside help, which is very much appreciated. Anne Sanders (Secretary, VegSA)"
+  website: vegsa.org.au
+  websiteName: VegSA
+
+
+- name: Francesca
+  testimonial: "I casually encountered Frazer in Union Square, NYC, five years ago, doing laughter yoga. At first I was surprised, skeptical, and unsettled, but it was an incredible and eye-opening experience, which has resonated deeply in my life since. Laughter is beautiful, and so is Frazer!"
+  image: image.jpg
+
+
+- name: Ruzena Spacek
+  testimonial: "Frazer certainly helped me greatly with his meditation and guided relaxations. I would recommend anyone doing a session with him or joining in one of his fun gatherings or laughter sessions. He has a real ability for gently guiding and empowering people to more harmonious feelings, and radiating infectious wellbeing, is a conscientious and genuine person dedicated to helping people and the world. When I stayed in his Eden Sanctuary I often enjoyed the wonderful atmosphere of happiness."
+
+
+- name: Daryl Moulder
+  testimonial: "I met Frazer at Confest and at the National Achievers Conference. I have really enjoyed his workshop which have benefited me greatly by helping to nurture a more positive attitude to life and to have the inspiration to change my life in a positive way."
+  websiteName: qTome 
+  website: http://www.qtome.com
+
+
+- name: Jo
+  testimonial: "I just watched a few of your YouTube videos. A few of your messages really stood out to me today. I liked how you asked us to imagine a world where everyone was so comfortable with who they truly are with no doubt or fear or shame or insecurity... that they could then be comfortable with others and even strangers. What would happen then? Mmmm i like to picture that and it helps me to choose again to see myself as pure and beautiful and love itself. Thank you. Also, you had said in another video that it was a profound realization for you when you understood deeply that who you think you are is not actually who you really are... Just a collection of stories, habits, personality traits that evolved out of some circumstance in the past that is no longer is use to us. I remember realizing that I could choose to believe these things about myself and also continue to add on more ideas of who I think I am based off of whatever shows up in life and carry them around and claim them as who I am or I can just as easily release these ideas and discover the me that I've always been, the me that has been still and waiting to be recognized. The me that was always there amidst all of the personality traits, reactions, self-dramas. What is left? Ahh so good that you remind me. Thank you again."
+
+
+
+- name: Sean Taylor
+  testimonial: "I have done many guided meditations with Frazer at Confest over the last couple of years, which have been if great benefit to me. Most especially, his compassion meditation which has enabled me to feel more compassion aswell as greater happiness."
+
+
+
+- name: Frazer Kirkman
+  testimonial: "hey, what can I say - the work changed my life so much that I have devoted my whole existence to it. It has bought me happiness more than I ever thought was possible, a social life that I never would have believed, and a dream that drives my life."
+facebook.com/frazerkirkman
+  image: shiningeyes.jpg
+
+
+- name: Sue Pearce
+  testimonial: "These workshops that are run by Frazer are so much benefit to all my being. As well as connecting with others on an community level but also on a spiritual level. The beautiful commitment that is given to the participants is so encompassing and contagious that you feel so good when ended, it's nearly addictive. Without any hesitation I would say everyone needs this to be happy."
+
+
+
+
+
+- name: Sammy
+  testimonial: "I would like to thank you for bringing one of the purest feelings of joy to my life. I have truly been lifted from a place I can't describe into another place I can't describe, hahahaha, but this one is much better. You have given my laugh back, and I had forgot that it was missing. Thank you, from the bottom of my heart. May your life be filled with joy"
+  website: http://www.zearful.info/
+
+
+
+- name: Peter Tuske
+  testimonial: "I only had to attend laughing session once to capture the essence of Frazer's happiness coaching. Frazer knows things, important truths of life and the human condition. A true buddha figure, he'll show you a part of you that you wouldn't have believed existed."
+
+
+
+- name: Dan Warwick
+  testimonial: "I'd just like to take a minute of my time to thank you once again for incorporating positive thinking into my life. You've made a big impact on my life.. Cheers bro"
+  website: https://www.facebook.com/messages/danowarwick
+  image:dan.jpg
+
+
