added all testimonials

--- a/_data/testimonial.yml
+++ b/_data/testimonial.yml
@@ -89,7 +89,7 @@
 
 - name: Frazer Kirkman
   testimonial: "hey, what can I say - the work changed my life so much that I have devoted my whole existence to it. It has bought me happiness more than I ever thought was possible, a social life that I never would have believed, and a dream that drives my life."
-facebook.com/frazerkirkman
+  website: facebook.com/frazerkirkman
   image: shiningeyes.jpg
 
 
