--- a/_config.yml
+++ b/_config.yml
@@ -15,20 +15,23 @@ color:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/Frazer%20Kirkman
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
-
-# Postal address (add as many lines as necessary)
-address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+    url: http://www.facebook.com/frazerkirkman
+  - title: google-plus
+    url: http://plus.google.com/u/0/+FrazerKirkman/
+  - title: youtube
+    url: http://www.youtube.com/user/unitedvisionaries/
+  - title: linkedin
+    url: http://www.linkedin.com/in/frazerkirkman/
+  - title: stumbleupon
+    url: http://www.stumbleupon.com/stumbler/NeoFrazer
+#  - title: stack-overflow
+#    url: http://stackoverflow.com/questions/tagged/jekyll
+#  - title: bitbucket
+#    url: http://bitbucket.org/jekyll
+#  - title: github
+#    url: http://github.com/jekyll
 
 # Build settings
 markdown: kramdown
