--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ color:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/Frazer%20Kirkman
+    url: http://twitter.com/FrazerKirkman
   - title: facebook
     url: http://www.facebook.com/frazerkirkman
   - title: google-plus
