--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3,30 +3,30 @@
   position: Lead Designer
   social:
     - title: twitter
-      url: #page-top
+      url: "#page-top"
     - title: facebook
-      url: #page-top
+      url: "#page-top"
     - title: stack-overflow
-      url: #page-top
+      url: "#page-top"
 
 - name: Larry Parker
   pic: 2.jpg
   position: Lead Marketer
   social:
     - title: twitter
-      url: #page-top
+      url: "#page-top"
     - title: facebook
-      url: #page-top
+      url: "#page-top"
     - title: linkedin
-      url: #page-top
+      url: "#page-top"
 
 - name: Diana Petersen
   pic: 3.jpg
   position: Lead Developer
   social:
     - title: twitter
-      url: #page-top
+      url: "#page-top"
     - title: facebook
-      url: #page-top
+      url: "#page-top"
     - title: google-plus
-      url: #page-top
+      url: "#page-top"
