fix testimonial links

--- a/_data/testimonial.yml
+++ b/_data/testimonial.yml
@@ -9,7 +9,7 @@
 
 - name: Deborah Goss
   testimonial: "We first met Frazer Kirkman during our Spring Vacation Care programme 2013. Working with a personal trainer to increase our physical fitness is applauded but how many of us are willing to employ a wellbeing coach to lead us in our pursuit of happiness? If there is such a thing, we may find it in the person of Frazer Kirkman, wellbeing coach, titled by some as ‘the happiness guru’. Our session began with a laughter workshop, a little confronting for some and it did seem a little contrived at first...how can you laugh at absolutely nothing, right?? Well take a moment to ponder this… Laughter is infectious. The sound of roaring laughter is far more contagious than any cough, sniffle, or sneeze. Laughter makes you feel good and this feeling remains even when the laughter subsides. It helps to keep a positive, optimistic outlook through difficult situations; a laugh or even simply a smile can go a long way toward making you feel better. Just hearing laughter primes your brain and readies you to smile and join in the fun!! Frazer is a delight; he gave us a great deal to think about and suggested that we could incorporate some new practices into our daily life. We talked about changing our habitual responses to difficult situations and he shared strategies that he used as a child when he faced conflict with schoolmates. We talked about compassion and positive visualization. We were given a tool kit that we could access to make ourselves feel better and rise above painful situations. Naturally this takes practice so we have invited Frazer to join us again to check on our progress and to instigate lots more laughter. Regards Debbie"
-  website: mercedes.catholic.edu.au
+  website: http://mercedes.catholic.edu.au
   websiteName: Mercedes College
   image: mercedes.jpg
 
@@ -47,7 +47,7 @@
 
 - name: Anne Sanders
   testimonial: "Vegetarian and Vegan Society (VegSA) Inc is very grateful to Frazer for help to update its web-site. Frazer demonstrates not only a considerable body of technical skill. He is also a sympathetic and encouraging teacher. He not only knows his subject but understands the students and how to respond to each of them. This is enabling VegSA to maintain its website with minimum of outside help, which is very much appreciated. Anne Sanders (Secretary, VegSA)"
-  website: vegsa.org.au
+  website: http://vegsa.org.au
   websiteName: VegSA
 
 - name: Francesca
@@ -70,7 +70,7 @@
 
 - name: Frazer Kirkman
   testimonial: "hey, what can I say - the work changed my life so much that I have devoted my whole existence to it. It has bought me happiness more than I ever thought was possible, a social life that I never would have believed, and a dream that drives my life."
-  website: facebook.com/frazerkirkman
+  website: http://facebook.com/frazerkirkman
   image: shiningeyes.jpg
 
 - name: Sue Pearce
