--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: http://dev.frazerk.net
 baseurl: ""
 
 # Site settings
-title: FrazerK
+title: Frazer Kirkman
 email: frazer@frazerk.net
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
